lib/flux/apps/servarr/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: radarr
    app.kubernetes.io/instance: radarr
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
