lib/flux/apps/servarr/radarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Radarr
    gethomepage.dev/description: Movies
    gethomepage.dev/icon: radarr.png
spec:
  parentRefs: ${gateway_parent_refs}
  hostnames:
    - ${domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: ${path}
      backendRefs:
        - name: radarr
          port: 80
